--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,19 @@
 # Core Data Science
-pandas>=2.0.0
-numpy>=1.24.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.14.0
+pandas>=1.5
+numpy>=1.23
+matplotlib>=3.6
+seaborn>=0.12
+plotly>=5.13
 
 # Dashboard
-streamlit>=1.24.0
+streamlit>=1.24
 streamlit-aggrid>=0.3.4
 streamlit-option-menu>=0.3.6
 
 # Utilities
-scipy>=1.10.0
-scikit-learn>=1.2.0
-openpyxl>=3.1.0
-pytest>=7.3.0
+scipy>=1.9
+scikit-learn>=1.2
+openpyxl>=3.1
 
-
-# Optional (for advanced features)
-geopandas>=0.13.0
-folium>=0.14.0
-dash>=2.11.0
+# Mapping (only if actually used)
+folium>=0.14
